# Commuter_Data_Web_App

./: .flake8  .gitignore  README.md  conda_requirements.txt  coursework2.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_test.yml
app/: __init__.py  config.py  models.py  schemas.py
app/blueprints/: auth.py  error_handling.py  general.py  maps.py  site_map.py
app/static/Highcharts-Maps-11.4.0/code/: highmaps.js.map  highmaps.src.js
app/static/Highcharts-Maps-11.4.0/code/modules/: map.js.map  map.src.js
app/static/Highcharts-Maps-11.4.0/examples/all-areas-as-null/: index.html
app/static/Highcharts-Maps-11.4.0/examples/all-maps/: index.html
app/static/Highcharts-Maps-11.4.0/examples/animated-mapline/: index.html
app/static/Highcharts-Maps-11.4.0/examples/audio-map/: index.html
app/static/Highcharts-Maps-11.4.0/examples/category-map/: index.html
app/static/Highcharts-Maps-11.4.0/examples/circlemap-africa/: index.html
app/static/Highcharts-Maps-11.4.0/examples/color-axis/: index.html
app/static/Highcharts-Maps-11.4.0/examples/data-class-ranges/: index.html
app/static/Highcharts-Maps-11.4.0/examples/data-class-two-ranges/: index.html
app/static/Highcharts-Maps-11.4.0/examples/eu-capitals-temp/: index.html
app/templates/: 404.html  500.html  base.html  data.html  dynamic_map.html  index.html  login.html  my_maps.html  profile.html  signup.html
scripts/: LSOA_geometries.dbf  LSOA_geometries.shx  create_areas.py  database_migration.py
tests/: conftest.py  state.json  test_playwright.py  test_routes.py
(+18 files in other folders)
